virtio, domu: refactoring of xen configuration
For the virtio functionality, we've switched to the approach, in which
QEMU, that provides the virtio backends to the guest domain, is being
started in DomD automatically by Xen itself.

Usage of that approach requires us to refactor the xen configuration:

- We do not need to use the VIRTIO_QEMU_DOMID parameter anymore
- We can omit to specify the max_grant_frames parameter
- We should add all QEMU parameters to the Xen config
- We should add 'virtio' parameter to the Xen config

On top of that it would be good to do the dynamic injection of parameters on
the file level, without echo-ing specific strings in bitbake recipes.

This patch covers modification of the DomU Xen configuration in the
above-mentioned way.

Signed-off-by: Vladyslav Goncharuk <vladyslav_goncharuk@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/meta-xt-prod-devel-rcar-control/recipes-guests/domu/files/pvr-domu-salvator-xs-m3n.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/domu/files/pvr-domu-salvator-xs-m3n.cfg
@@ -10,3 +10,5 @@ iomem = [
 #gsx@fd000000
     "0xfd010,1@0xfd000",
  ]
+
+extra = "root=/dev/xvda1 rw rootwait console=hvc0 cma=256M pvrsrvkm.DriverMode=1"
