--- a/meta-xt-prod-devel-rcar-control/recipes-guests/domu/files/domu-vdevices-virtio.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/domu/files/domu-vdevices-virtio.cfg
@@ -7,20 +7,19 @@ virtio=[
 'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:02.0, grant_usage=1, backend_type=qemu',
 'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:03.0, grant_usage=1, backend_type=qemu',
 'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:04.0, grant_usage=1, backend_type=qemu',
-'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:05.0, grant_usage=1, backend_type=qemu'
+[VIRTIO_DRIVE_CONFIGURATION]
 ]
 
 device_model_args=[
-'-device', 'virtio-blk-pci,scsi=off,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=1,bus=pcie.0,addr=2,drive=image',
-'-drive', 'if=none,id=image,format=raw,file=/dev/STORAGE_PART3',
-'-device', 'virtio-net-pci,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=2,bus=pcie.0,addr=1,romfile=,id=nic0,netdev=net0,mac=08:00:27:ff:cb:cf',
+'-device', 'virtio-net-pci,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=1,romfile=,id=nic0,netdev=net0,mac=08:00:27:ff:cb:cf',
 '-netdev', 'type=tap,id=net0,ifname=vif-emu,br=xenbr0,script=no,downscript=no',
-'-device', 'virtio-keyboard-pci,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=3',
+'-device', 'virtio-keyboard-pci,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=2',
 '-audiodev', 'alsa,id=snd0,out.dev=default',
-'-device', 'virtio-snd-pci,audiodev=snd0,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=4',
-'-device', 'virtio-gpu-gl-pci,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=5',
+'-device', 'virtio-snd-pci,audiodev=snd0,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=3',
+'-device', 'virtio-gpu-gl-pci,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=4',
 '-display', 'sdl,gl=on',
 '-vga', 'std',
+[QEMU_DRIVE_CONFIGURATION]
 '-d', 'guest_errors',
 '-monitor', 'telnet:127.0.0.1:1234,server,nowait',
 '-global', 'virtio-mmio.force-legacy=false',
