--- a/meta-xt-prod-devel-rcar-control/recipes-guests/domu/files/domu-vdevices-virtio.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/domu/files/domu-vdevices-virtio.cfg
@@ -8,6 +8,7 @@ virtio=[
 'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:03.0, grant_usage=1, backend_type=qemu',
 'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:04.0, grant_usage=1, backend_type=qemu',
 [VIRTIO_DRIVE_CONFIGURATION]
+'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:06.0, grant_usage=1, backend_type=qemu'
 ]
 
 device_model_args=[
@@ -20,6 +21,7 @@ device_model_args=[
 '-display', 'sdl,gl=on',
 '-vga', 'std',
 [QEMU_DRIVE_CONFIGURATION]
+'-device', 'vhost-vsock-pci,guest-cid=3,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=6',
 '-d', 'guest_errors',
 '-monitor', 'telnet:127.0.0.1:1234,server,nowait',
 '-global', 'virtio-mmio.force-legacy=false',
