domd, domu: Add installation of the lisot tool
We need to verify that vsock communication works between the domains
inside the Xen hypervisor.

This patch integrates the lisot tool into domd and domu. It can be used
to test the vsock communication between the driver and the guest
domains.

Signed-off-by: Vladyslav Goncharuk <vladyslav_goncharuk@epam.com>
Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -315,6 +315,7 @@ components:
         - "../meta-openembedded/meta-gnome"
         - "../meta-xt-common/meta-xt-domu"
         - "../meta-xt-common/meta-xt-domu-virtio"
+        - "../meta-xt-prod-devel-rcar/meta-xt-domx-gen3"
         - "../meta-xt-prod-devel-rcar/meta-xt-domu-gen3"
       build_target: core-image-weston
       target_images:
