--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -6,13 +6,16 @@ variables:
   DOM0_BUILD_DIR: "build-dom0"
   DOMD_BUILD_DIR: "build-domd"
   DOMU_BUILD_DIR: "build-domu"
+  DOM0_MACHINE: "generic-armv8-xt"
+  DOMD_MACHINE: "%{MACHINE}"
+  DOMU_MACHINE: "%{MACHINE}"
   ANDROID_KERNEL_DIR: "android_kernel"
   DOMA_DIR: "android"
   DOMZ_DIR: "zephyr"
-  XT_DOMD_DTB_NAME: "%{SOC_FAMILY}-%{MACHINE}-domd.dtb"
+  XT_DOMD_DTB_NAME: "%{SOC_FAMILY}-%{DOMD_MACHINE}-domd.dtb"
   XT_DOMU_DTB_NAME: "salvator-generic-domu.dtb"
   XT_DOMA_DTB_NAME: ""
-  XT_XEN_DTB_NAME: "%{SOC_FAMILY}-%{MACHINE}-xen.dtb"
+  XT_XEN_DTB_NAME: "%{SOC_FAMILY}-%{DOMD_MACHINE}-xen.dtb"
   XT_PVR_NUM_OSID: "2"
   XT_OP_TEE_FLAVOUR: "generic_dt"
   XT_GENERIC_DOMU_TAG: ""
@@ -27,6 +30,7 @@ variables:
   XT_PREBUILT_GSX_DIR: ""
   XT_USE_DDK1_11: "0"
   XT_MACHINEOVERRIDES_RAM: "mem8gb"
+  ANDROID_DEVICE: "xenvm"
 common_data:
   # Sources used by all yocto-based domains
   sources: &COMMON_SOURCES
@@ -67,7 +71,6 @@ common_data:
 
   # Conf options for domain that are built used renesas layer
   domd_domu_conf: &DOMD_DOMU_CONF
-    - [MACHINE, "%{MACHINE}"]
     - [SOC_FAMILY, "%{SOC_FAMILY}"]
 
     # Add systemd configuration
@@ -160,7 +163,7 @@ components:
       work_dir: "%{DOM0_BUILD_DIR}"
       conf:
         - *COMMON_CONF
-        - [MACHINE, "generic-armv8-xt"]
+        - [MACHINE, "%{DOM0_MACHINE}"]
         - [XT_DOMD_CONFIG_NAME, "%{XT_DOMD_CONFIG_NAME}"]
         - [XT_DOMD_DTB_NAME, "%{XT_DOMD_DTB_NAME}"]
         - [XT_DOM_NAME, "dom0"]
@@ -200,12 +203,12 @@ components:
         - "../meta-xt-prod-devel-rcar/meta-xt-prod-devel-rcar-control"
       build_target: core-image-thin-initramfs
       external_src:
-        domd: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/"
+        domd: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/"
       additional_deps:
-        - "%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/Image"
+        - "%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/Image"
       target_images:
-        - "tmp/deploy/images/generic-armv8-xt/Image"
-        - "tmp/deploy/images/generic-armv8-xt/uInitramfs"
+        - "tmp/deploy/images/%{DOM0_MACHINE}/Image"
+        - "tmp/deploy/images/%{DOM0_MACHINE}/uInitramfs"
 
   domd:
     build-dir: "%{YOCTOS_WORK_DIR}"
@@ -226,6 +229,7 @@ components:
       conf:
         - *COMMON_CONF
         - *DOMD_DOMU_CONF
+        - [MACHINE, "%{DOMD_MACHINE}"]
         - [XT_DOM_NAME, "domd"]
         - [XT_OP_TEE_FLAVOUR, "%{XT_OP_TEE_FLAVOUR}"]
         - [XT_DEVICE_TREES, "%{XT_DOMD_DTB_NAME} %{XT_DOMA_DTB_NAME} %{XT_XEN_DTB_NAME}"]
@@ -266,11 +270,11 @@ components:
         - "../meta-xt-prod-devel-rcar/meta-xt-prod-devel-rcar-driver-domain"
         - "../meta-xt-prod-devel-rcar/meta-xt-domd-gen3"
       target_images:
-        - "tmp/deploy/images/%{MACHINE}/Image"
-        - "tmp/deploy/images/%{MACHINE}/xen-%{MACHINE}.uImage"
-        - "tmp/deploy/images/%{MACHINE}/xenpolicy-%{MACHINE}"
-        - "tmp/deploy/images/%{MACHINE}/%{XT_XEN_DTB_NAME}"
-        - "tmp/deploy/images/%{MACHINE}/core-image-weston-%{MACHINE}.ext4"
+        - "tmp/deploy/images/%{DOMD_MACHINE}/Image"
+        - "tmp/deploy/images/%{DOMD_MACHINE}/xen-%{DOMD_MACHINE}.uImage"
+        - "tmp/deploy/images/%{DOMD_MACHINE}/xenpolicy-%{DOMD_MACHINE}"
+        - "tmp/deploy/images/%{DOMD_MACHINE}/%{XT_XEN_DTB_NAME}"
+        - "tmp/deploy/images/%{DOMD_MACHINE}/core-image-weston-%{DOMD_MACHINE}.ext4"
 
   domu:
     build-dir: "%{YOCTOS_WORK_DIR}"
@@ -285,6 +289,7 @@ components:
       conf:
         - *COMMON_CONF
         - *DOMD_DOMU_CONF
+        - [MACHINE, "%{DOMU_MACHINE}"]
         - [XT_DOM_NAME, "domu"]
         - [EXTRA_IMAGEDEPENDS:remove, "arm-trusted-firmware"]
         - [EXTRA_IMAGEDEPENDS:remove, "optee-os"]
@@ -304,8 +309,8 @@ components:
         - "../meta-xt-prod-devel-rcar/meta-xt-domu-gen3"
       build_target: core-image-weston
       target_images:
-        - "tmp/deploy/images/%{MACHINE}/Image"
-        - "tmp/deploy/images/%{MACHINE}/core-image-weston-%{MACHINE}.ext4"
+        - "tmp/deploy/images/%{DOMU_MACHINE}/Image"
+        - "tmp/deploy/images/%{DOMU_MACHINE}/core-image-weston-%{DOMU_MACHINE}.ext4"
 
   doma_kernel:
     build-dir: "%{ANDROID_KERNEL_DIR}"
@@ -346,12 +351,12 @@ components:
         - "DDK_KM_PREBUILT_MODULE=%{XT_DOMA_DDK_KM_PREBUILT_MODULE}"
       lunch_target: xenvm-userdebug
       target_images:
-        - "out/target/product/xenvm/boot.img"
-        - "out/target/product/xenvm/vendor_boot.img"
-        - "out/target/product/xenvm/super.img"
-        - "out/target/product/xenvm/userdata.img"
-        - "out/target/product/xenvm/vbmeta.img"
-        - "out/target/product/xenvm/system.img"
+        - "out/target/product/%{ANDROID_DEVICE}/boot.img"
+        - "out/target/product/%{ANDROID_DEVICE}/vendor_boot.img"
+        - "out/target/product/%{ANDROID_DEVICE}/super.img"
+        - "out/target/product/%{ANDROID_DEVICE}/userdata.img"
+        - "out/target/product/%{ANDROID_DEVICE}/vbmeta.img"
+        - "out/target/product/%{ANDROID_DEVICE}/system.img"
       additional_deps:
         - "../%{ANDROID_KERNEL_DIR}/out/android12-5.4/common/arch/arm64/boot/Image"
 
@@ -370,23 +375,23 @@ components:
     build-dir: "."
     builder:
       type: archive
-      base_dir: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/firmware/"
-      name: "ipl-%{MACHINE}.tar.bz2"
+      base_dir: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/firmware/"
+      name: "ipl-%{DOMD_MACHINE}.tar.bz2"
       items:
-        - "bl2-%{MACHINE}-4x2g.bin"
-        - "bl2-%{MACHINE}-4x2g.srec"
-        - "bl31-%{MACHINE}-4x2g.bin"
-        - "bl31-%{MACHINE}-4x2g.srec"
+        - "bl2-%{DOMD_MACHINE}-4x2g.bin"
+        - "bl2-%{DOMD_MACHINE}-4x2g.srec"
+        - "bl31-%{DOMD_MACHINE}-4x2g.bin"
+        - "bl31-%{DOMD_MACHINE}-4x2g.srec"
         - "bootparam_sa0-4x2g.bin"
         - "bootparam_sa0-4x2g.srec"
         - "cert_header_sa6-4x2g.bin"
         - "cert_header_sa6-4x2g.srec"
         - "cert_header_sa6_emmc.bin"
         - "cert_header_sa6_emmc.srec"
-        - "tee-%{MACHINE}.bin"
-        - "tee-%{MACHINE}.srec"
-        - "u-boot-elf-%{MACHINE}.srec"
-        - "u-boot-%{MACHINE}.bin"
+        - "tee-%{DOMD_MACHINE}.bin"
+        - "tee-%{DOMD_MACHINE}.srec"
+        - "u-boot-elf-%{DOMD_MACHINE}.srec"
+        - "u-boot-%{DOMD_MACHINE}.bin"
 
 images:
   full:
@@ -398,15 +403,15 @@ images:
         type: ext4
         size: 128 MiB
         items:
-          "Image": "%{YOCTOS_WORK_DIR}/%{DOM0_BUILD_DIR}/tmp/deploy/images/generic-armv8-xt/Image"
-          "uInitramfs": "%{YOCTOS_WORK_DIR}/%{DOM0_BUILD_DIR}/tmp/deploy/images/generic-armv8-xt/uInitramfs"
-          "xen": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/xen-%{MACHINE}.uImage"
-          "xenpolicy": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/xenpolicy-%{MACHINE}"
-          "xen.dtb": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/%{XT_XEN_DTB_NAME}"
+          "Image": "%{YOCTOS_WORK_DIR}/%{DOM0_BUILD_DIR}/tmp/deploy/images/%{DOM0_MACHINE}/Image"
+          "uInitramfs": "%{YOCTOS_WORK_DIR}/%{DOM0_BUILD_DIR}/tmp/deploy/images/%{DOM0_MACHINE}/uInitramfs"
+          "xen": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/xen-%{DOMD_MACHINE}.uImage"
+          "xenpolicy": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/xenpolicy-%{DOMD_MACHINE}"
+          "xen.dtb": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/%{XT_XEN_DTB_NAME}"
       domd_rootfs:
         gpt_type: B921B045-1DF0-41C3-AF44-4C6F280D3FAE # Linux aarch64 root
         type: raw_image
-        image_path: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/core-image-weston-%{MACHINE}.ext4"
+        image_path: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/core-image-weston-%{DOMD_MACHINE}.ext4"
 
 parameters:
   # Machines
@@ -520,10 +525,10 @@ parameters:
                 - [OVERRIDES:append, ":enable_android"]
               additional_deps:
                 # This is not actually a hard dep. We just want to force Android build
-                - "../%{DOMA_DIR}/out/target/product/xenvm/boot.img"
+                - "../%{DOMA_DIR}/out/target/product/%{ANDROID_DEVICE}/boot.img"
               external_src:
                 # Android uses DTB generated by DomD
-                doma: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/"
+                doma: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/"
         images:
           android_only: &ANDROID_IMAGE
             desc: "Android sub-image (this image is passed to Android VM as a separate block device)"
@@ -534,7 +539,7 @@ parameters:
                 gpt_type: 49A4D17F-93A3-45C1-A0DE-F50B2EBE2599 # Android boot 1
                 type: raw_image
                 size: 30 MiB
-                image_path: "%{DOMA_DIR}/out/target/product/xenvm/boot.img"
+                image_path: "%{DOMA_DIR}/out/target/product/%{ANDROID_DEVICE}/boot.img"
               boot_b:
                 gpt_type: 20117F86-E985-4357-B9EE-374BC1D8487D # Android boot 2
                 type: empty
@@ -543,7 +548,7 @@ parameters:
                 gpt_type: DF24E5ED-8C96-4B86-B00B-79667DC6DE11 # Android sparse 1
                 type: raw_image
                 size: 30 MiB
-                image_path: "android/out/target/product/xenvm/vendor_boot.img"
+                image_path: "android/out/target/product/%{ANDROID_DEVICE}/vendor_boot.img"
               vendor_boot_b:
                 gpt_type: 7C29D3AD-78B9-452E-9DEB-D098D542F092 # Android sparse 2
                 type: empty
@@ -552,7 +557,7 @@ parameters:
                 gpt_type: 19A710A2-B3CA-11E4-B026-10604B889DCF # Android meta
                 type: raw_image
                 size: 1 MiB
-                image_path: "%{DOMA_DIR}/out/target/product/xenvm/vbmeta.img"
+                image_path: "%{DOMA_DIR}/out/target/product/%{ANDROID_DEVICE}/vbmeta.img"
               vbmeta_b:
                 gpt_type: 19A710A2-B3CA-11E4-B026-10604B889DCF # Android meta
                 type: empty
@@ -574,11 +579,11 @@ parameters:
               super:
                 gpt_type: 4627AE27-CFEF-48A1-88FE-99C3509ADE26 # Android raw resources
                 type: android_sparse
-                image_path: "%{DOMA_DIR}/out/target/product/xenvm/super.img"
+                image_path: "%{DOMA_DIR}/out/target/product/%{ANDROID_DEVICE}/super.img"
               userdata:
                 gpt_type: 1B81E7E6-F50D-419B-A739-2AEEF8DA3335 # Android userdata
                 type: android_sparse
-                image_path: "%{DOMA_DIR}/out/target/product/xenvm/userdata.img"
+                image_path: "%{DOMA_DIR}/out/target/product/%{ANDROID_DEVICE}/userdata.img"
           full:
             partitions:
               android:
@@ -599,16 +604,16 @@ parameters:
                 - [XT_DOMU_DTB_NAME, "%{XT_DOMU_DTB_NAME}"]
                 - [XT_DOMU_CONFIG_NAME, "%{XT_DOMU_CONFIG_NAME}"]
               additional_deps:
-                - "%{DOMU_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/Image"
+                - "%{DOMU_BUILD_DIR}/tmp/deploy/images/%{DOMU_MACHINE}/Image"
               external_src:
-                domu: "%{YOCTOS_WORK_DIR}/%{DOMU_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/"
+                domu: "%{YOCTOS_WORK_DIR}/%{DOMU_BUILD_DIR}/tmp/deploy/images/%{DOMU_MACHINE}/"
         images:
           full:
             partitions:
               domu-rootfs:
                 type: raw_image
                 gpt_type: 0FC63DAF-8483-4772-8E79-3D69D8477DE4 # Linux filesystem data
-                image_path: "%{YOCTOS_WORK_DIR}/%{DOMU_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/core-image-weston-%{MACHINE}.ext4"
+                image_path: "%{YOCTOS_WORK_DIR}/%{DOMU_BUILD_DIR}/tmp/deploy/images/%{DOMU_MACHINE}/core-image-weston-%{DOMU_MACHINE}.ext4"
 
   ENABLE_ZEPHYR:
     desc: "Build Zephyr as guest domain"
