yaml: add `../../` to `common_data` path
This commit moves the default location of the yocto's
common data (downloads and caches) out of the build directory.
This allows to:
  - have the same approach in all our products;
  - decrease build time on host with the existing yocto's caches.

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>
Reviewed-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -47,8 +47,8 @@ common_data:
       rev: master
   # Common configuration options for all yocto-based domains
   conf: &COMMON_CONF
-    - [SSTATE_DIR, "${TOPDIR}/../common_data/sstate"]
-    - [DL_DIR, "${TOPDIR}/../common_data/downloads"]
+    - [SSTATE_DIR, "${TOPDIR}/../../../common_data/sstate"]
+    - [DL_DIR, "${TOPDIR}/../../../common_data/downloads"]
 
     # Skip warning about missing "virtualization" distro feature
     - [SKIP_META_VIRT_SANITY_CHECK, "1"]
