--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -126,7 +126,7 @@ components:
       - *COMMON_SOURCES
       - type: git
         url: "https://github.com/xen-troops/meta-xt-prod-devel-rcar.git"
-        rev: "master"
+        rev: master
     builder:
       type: yocto
       work_dir: "%{DOM0_BUILD_DIR}"
@@ -200,13 +200,13 @@ components:
       - *COMMON_SOURCES
       - type: git
         url: "https://github.com/renesas-rcar/meta-renesas.git"
-        rev: "kirkstone-dev"
+        rev: kirkstone-dev
       - type: git
         url: "https://git.yoctoproject.org/meta-selinux"
-        rev: "kirkstone"
+        rev: kirkstone
       - type: git
         url: "https://github.com/xen-troops/meta-xt-prod-devel-rcar.git"
-        rev: "master"
+        rev: master
     builder:
       type: yocto
       work_dir: "%{DOMD_BUILD_DIR}"
@@ -297,7 +297,7 @@ components:
       - *COMMON_SOURCES
       - type: git
         url: "https://github.com/renesas-rcar/meta-renesas.git"
-        rev: "kirkstone-dev"
+        rev: kirkstone-dev
     builder:
       type: yocto
       work_dir: "%{DOMU_BUILD_DIR}"
