yaml: AGL: fix ambiguous revisions for meta-clang
The meta-clang has two different revisions, and this
error is now catched by the moulin v0.21.
This commit fixes the issue.

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>
Reviewed-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar-agl.yaml
+++ b/prod-devel-rcar-agl.yaml
@@ -118,7 +118,7 @@ common_data:
         rev: dunfell
       - type: git
         url: "https://github.com/kraj/meta-clang.git"
-        rev: dunfell
+        rev: "3bb001d3f364bbf6588fed04b9ee2c7e74a0beba" # dunfell
       - type: git
         url: "ssh://git@gitpct.epam.com/epmd-aepr/img-proprietary"
         rev: "6ed789681c2867c7cae8b0150e093e1e2781797e"
