yaml: virtio: fix incorrect path
Fix incorrect value of the XT_MULTIMEDIA_EVA_DIR.

Fixes: a9dd3e0ab146
("yaml: create new 'prod-devel-rcar-virtio.yaml' for VIRTIO configuration").

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>
Reviewed-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -691,7 +691,7 @@ parameters:
           #   - use yocto's internal variable ${TOPDIR};
           #   - or moulin's variable like %{DOMD_BUILD_DIR}.
           #     Pay attention to usage of % instead of $.
-          XT_MULTIMEDIA_EVA_DIR: "/mnt/download/eva_mm"
+          XT_MULTIMEDIA_EVA_DIR: "${TOPDIR}/../../../eva_mm"
         components:
           domd:
             builder:
