--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -35,19 +35,19 @@ common_data:
   # Sources used by all yocto-based domains
   sources: &COMMON_SOURCES
     - type: git
-      url: "https://git.yoctoproject.org/poky"
+      url: https://git.yoctoproject.org/poky
       rev: kirkstone
     - type: git
-      url: "https://git.openembedded.org/meta-openembedded"
+      url: https://git.openembedded.org/meta-openembedded
       rev: kirkstone
     - type: git
-      url: "https://git.yoctoproject.org/meta-virtualization"
+      url: https://git.yoctoproject.org/meta-virtualization
       rev: kirkstone
     - type: git
-      url: "https://github.com/xen-troops/meta-xt-common.git"
+      url: https://github.com/xen-troops/meta-xt-common.git
       rev: master
     - type: git
-      url: "https://github.com/xen-troops/meta-xt-rcar.git"
+      url: https://github.com/xen-troops/meta-xt-rcar.git
       rev: master
   # Common configuration options for all yocto-based domains
   conf: &COMMON_CONF
@@ -130,13 +130,13 @@ common_data:
   ddk_source_overrides: &DDK_SOURCE_OVERRIDES
     sources:
       - type: git
-        url: "https://git.openembedded.org/meta-python2"
+        url: https://git.openembedded.org/meta-python2
         rev: kirkstone
       - type: git
-        url: "https://github.com/kraj/meta-clang.git"
+        url: https://github.com/kraj/meta-clang.git
         rev: kirkstone
       - type: git
-        url: "ssh://git@gitpct.epam.com/epmd-aepr/img-proprietary"
+        url: ssh://git@gitpct.epam.com/epmd-aepr/img-proprietary
         rev: "6ed789681c2867c7cae8b0150e093e1e2781797e"
         dir: "proprietary"
     builder:
@@ -156,7 +156,7 @@ components:
     sources:
       - *COMMON_SOURCES
       - type: git
-        url: "https://github.com/xen-troops/meta-xt-prod-devel-rcar.git"
+        url: https://github.com/xen-troops/meta-xt-prod-devel-rcar.git
         rev: master
     builder:
       type: yocto
@@ -221,7 +221,7 @@ components:
         url: https://git.yoctoproject.org/meta-selinux
         rev: kirkstone
       - type: git
-        url: "https://github.com/xen-troops/meta-xt-prod-devel-rcar.git"
+        url: https://github.com/xen-troops/meta-xt-prod-devel-rcar.git
         rev: master
     builder:
       type: yocto
@@ -476,7 +476,7 @@ parameters:
           domd:
             sources:
               - type: git
-                url: "https://github.com/xen-troops/meta-rcar.git"
+                url: https://github.com/xen-troops/meta-rcar.git
                 rev: xt-master
             builder:
               layers:
@@ -685,7 +685,7 @@ parameters:
           domd:
             sources:
               - type: git
-                url: "https://github.com/aoscloud/meta-aos"
+                url: https://github.com/aoscloud/meta-aos
                 rev: main
             builder:
               layers:
