--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -295,6 +295,9 @@ components:
       - type: git
         url: https://github.com/renesas-rcar/meta-renesas.git
         rev: kirkstone-dev
+      - type: git
+        url: https://github.com/xen-troops/meta-xt-prod-devel-rcar.git
+        rev: master
     builder:
       type: yocto
       work_dir: "%{DOMU_BUILD_DIR}"
